chore: add logic to retrieve drivers by session id