@@ -3,9 +3,11 @@ package com.sporty.f1bet.infrastructure.provider;
 import static org.springframework.http.HttpMethod.GET;
 
 import com.sporty.f1bet.application.provider.Provider;
+import com.sporty.f1bet.infrastructure.mapper.DriverMapper;
 import com.sporty.f1bet.infrastructure.mapper.SessionMapper;
 import com.sporty.f1bet.infrastructure.persistence.entity.Driver;
 import com.sporty.f1bet.infrastructure.persistence.entity.Session;
+import com.sporty.f1bet.infrastructure.provider.dto.DriverDTO;
 import com.sporty.f1bet.infrastructure.provider.dto.SessionDTO;
 import java.util.Collections;
 import java.util.List;
@@ -23,6 +25,7 @@ import org.springframework.web.util.UriComponentsBuilder;
 public class OpenF1Provider implements Provider {
 
     private static final String SESSION_RESOURCE = "/sessions";
+    private static final String DRIVER_RESOURCE = "/drivers";
 
     private final String url;
     private final RestTemplate restTemplate;
@@ -50,7 +53,23 @@ public class OpenF1Provider implements Provider {
     }
 
     @Override
+    @Retryable(
+            retryFor = {RestClientException.class},
+            maxAttempts = 4,
+            backoff = @Backoff(delay = 1000, multiplier = 2.0))
     public List<Driver> getDrivers(Integer sessionKey) {
-        return List.of();
+        final String uri = UriComponentsBuilder.fromUriString(url + DRIVER_RESOURCE)
+                .queryParam("session_key", sessionKey)
+                .build()
+                .encode()
+                .toUri()
+                .toString();
+
+        final ResponseEntity<List<DriverDTO>> response =
+                restTemplate.exchange(uri, GET, null, new ParameterizedTypeReference<>() {});
+
+        if (response.getBody() == null) return Collections.emptyList();
+
+        return response.getBody().stream().map(DriverMapper::toEntity).toList();
     }
 }
